# Physical-AI-Humanoid-Robotics

./: $null  .gitignore  CLAUDE.md  GEMINI.md  QWEN.md  README.md  VERCEL_DEPLOYMENT_GUIDE.md  docusaurus.config.ts  package-lock.json  package.json  playwright.config.ts  requirements.txt  sidebar_feature_description.txt  sidebars.ts  vercel.json  weekly_breakdown_feature_description.txt
.claude/: settings.local.json
.specify/: temp-feature-description.txt
api/: ask.py  health.py
backend/: README.md  TROUBLESHOOTING.md  examples.py  main.py  pyproject.toml  requirements.txt
backend/src/: config.py  main.py
backend/src/agents/: book_agent.py
backend/src/api/: chat_endpoint.py  routes.py  schemas.py
backend/src/middleware/: error_handler.py  security_headers.py
backend/src/models/: chat_response.py  question_answer.py  source_reference.py  user_query.py
backend/src/scripts/: __init__.py  run_us2_validation.py  run_us3_validation.py  run_validation.py
backend/src/services/: caching_service.py  chat_service.py  query_service.py  retrieval_service.py
backend/src/utils/: circuit_breaker.py  logging.py
backend/src/validation/: __init__.py  api.py  config.py  logger.py  metrics.py  models.py  module_selector.py  qdrant_connector.py  query_generator.py  result_analyzer.py  retrieval_validator.py  source_validator.py  utils.py
docs/: assessments.mdx  intro.md  test-simplified-components.mdx  weekly-schedule.mdx
physical-ai-book/: docusaurus.config.ts  package-lock.json
scripts/: remove-broken-components.js  remove-empty-glossary.js
src/theme/: Root.js  (+2 more)
(+303 files in other folders)
