[project]
name = "vector-db-ingestion"
version = "0.1.0"
description = "Vector database ingestion system for Docusaurus book content"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.12.0",
    "requests>=2.31.0",
    "cohere>=4.0.0",
    "qdrant-client>=1.8.0",
    "python-dotenv>=1.0.0",
    "tenacity>=8.2.0",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
]
