[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "book-agent-sdk"
version = "0.1.0"
description = "A backend agent that accepts user questions, retrieves relevant book content, and generates grounded answers"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.1",
    "openai>=1.3.7",
    "qdrant-client>=1.8.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.5.0",
    "uvicorn>=0.24.0",
    "pytest>=7.4.3"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "mypy",
    "flake8"
]

[tool.setuptools]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["backend/tests"]
python_files = ["test_*.py"]